# hive-orchestrator

./: .gitignore  AGENTS.md  GETTING_STARTED.md  README.md  hive-plan.md  hive_orchestrator_plan_revised_v_1.md  multi-agent-orchestrator-plan.md  pyproject.toml  rule-of-five.md
.beads/: issues.jsonl  metadata.json
.beads/export-state/: 5fa2896c46af2820.json
.claude/: settings.local.json
docs/: agent-review-conversation.md  conversation-lessons-2026-02-06.md  rule-of-five-review.md
hive/: __init__.py  cli.py  config.py  context.py  utils.py  worktree.py
hive/commands/: __init__.py  daemon.py  init.py  merge.py  plan.py  status.py  task.py  work.py
plans/: breakdown-command-plan-2026-02-06.md  ideas.md  rule-of-five-review-feature-plan-2026-02-06.md
tests/: __init__.py  test_config.py  test_context.py  test_daemon.py  test_init.py  test_merge.py  test_plan.py  test_status.py  test_task.py  test_utils.py  test_work.py  test_worktree.py
worktrees/: .gitignore
